--- a/Restaurant-Website.html
+++ b/Restaurant-Website.html
@@ -48,6 +48,72 @@
           <p>Kombucha</p>
         </div>
       </div>
+
+      <section class="features">
+        <div class="feature">
+          <span class="icon">🌮</span>
+          <h3>Tacos</h3>
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veritatis,
+            rem!
+          </p>
+        </div>
+
+        <div class="feature">
+          <span class="icon">🍺</span>
+          <h3>Beer</h3>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Porro,
+            fugiat?
+          </p>
+        </div>
+
+        <div class="feature">
+          <span class="icon">🍷</span>
+          <h3>Wine</h3>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Porro,
+            fugiat?
+          </p>
+        </div>
+
+        <div class="feature">
+          <span class="icon">🎵</span>
+          <h3>Music</h3>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Porro,
+            fugiat?
+          </p>
+        </div>
+      </section>
+
+      <section class="about">
+        <img src="queso-taco.png" alt="Yummy Taco" class="about_mockup" />
+        <div class="about_details">
+          <h2>Featured Taco</h2>
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nulla,
+            distinctio!
+          </p>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+          <button>Learn more →</button>
+        </div>
+      </section>
+
+      <section class="gallery">
+        <h2>::before "Instant Grams" ::after</h2>
+
+        <img src="https://source.unsplash.com/random/201x201" alt />
+        <img src="https://source.unsplash.com/random/202x202" alt />
+        <img src="https://source.unsplash.com/random/203x203" alt />
+        <img src="https://source.unsplash.com/random/204x204" alt />
+        <img src="https://source.unsplash.com/random/205x205" alt />
+        <img src="https://source.unsplash.com/random/206x206" alt />
+        <img src="https://source.unsplash.com/random/207x207" alt />
+        <img src="https://source.unsplash.com/random/207x208" alt />
+        <img src="https://source.unsplash.com/random/207x209" alt />
+        <img src="https://source.unsplash.com/random/207x210" alt />
+      </section>
     </div>
   </body>
 </html>
